Add HTMX to the _member_table and base template to allow table edits without page loads

--- a/apps/assessments/templates/assessments/confirm_team.html
+++ b/apps/assessments/templates/assessments/confirm_team.html
@@ -18,7 +18,7 @@
   </p>
 </section>
 
-  {% include "teams/_member_table.html" with team=team %}
+  {% include "teams/_member_table.html" with team=team use_htmx=True %}
 
   <hr>
 
