--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,7 @@
     </div>
     
   </div>
-  <script> 
-    lucide.createIcons();
-  </script>
+  <script>lucide.createIcons();</script>
+  <script src="https://unpkg.com/htmx.org@1.9.12"></script>
 </body>
 </html>
