--- a/apps/assessments/templates/assessments/new_assessment.html
+++ b/apps/assessments/templates/assessments/new_assessment.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h1>Create New Assessment</h1>
 
-<h2>Step 1/3: Set Up Assessment</h2>
+<h2>Step 1/3: Set Up Basic Assessment Info</h2>
 
 <section class="container--narrow">
 
@@ -12,32 +12,32 @@
         {% csrf_token %}
         <p><strong>Assign the team</strong> that will be participating in this assessment. 
             The team name will be assigned to the title of your assessment and report.</p>
-        <select name="team">
-            <option value="">-- Select a team --</option>
-            {% for team in teams %}
-                <option value="{{ team.id }}" {% if selected_team and selected_team.id == team.id %}selected{% endif %}>{{ team.name }}</option>
+        <select name="team" id="team">
+            {% for t in teams %}
+                <option value="{{ t.id }}" {% if initial_team_id == t.id %}selected{% endif %}>
+                        {{ t.name }}
+                </option>
             {% endfor %}
         </select>
 
         <p>OR</p>
         <input type="text" name="new_team_name" placeholder="Enter a new team name">
 
-        {% if selected_team %}
-            <hr>
-            <h3>Team Members</h3>
-            {% include "teams/_member_table.html" with team=selected_team %}
-        {% endif %}
-
-        <p class="para-small"><em>You will be able to edit the team members on the next screen.</em>
-        </p>
-
+        <br><br>
+        <hr>
         <br>
 
         <p><strong>Select the target date</strong> by which all responses should be submitted. 
             The month and year of this date will be assigned to the title of your assessment 
             and report.
         </p>
-        <input type="date" name="deadline" required>
+        <input
+            type="date"
+            name="deadline"
+            id="deadline"
+            value="{{ initial_deadline|default:'' }}"
+            required
+        >
 
         <br><br>
 
