--- a/apps/payments/templates/payments/checkout.html
+++ b/apps/payments/templates/payments/checkout.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% block title %}Checkout{% endblock %}
 {% block content %}
-<h2>Checkout</h2>
-<p>Placeholder checkout coming soon.</p>
+<h1>Checkout</h1>
+<p>Have you ensured all participants have submitted their answers? Once you purchase 
+    the report, this assessment will be closed. This action cannot be reversed.</p>
+<p>If you're ready to generate your team's final report, proceed with payment. After
+    purchasing the report, you will be able to download the report.</p>
+<button class="button--secondary">Purchase</button>
 {% endblock %}
