--- a/apps/payments/templates/payments/cancelled.html
+++ b/apps/payments/templates/payments/cancelled.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-{% block title %}Payment Success{% endblock %}
+{% block title %}Payment Cancelled{% endblock %}
 {% block content %}
 <h2>Payment Success</h2>
   <section class="section">
     <div class="container">
-      <p>Your payment succeeded.</p>
+      <p>Your payment was cancelled.</p>
     </div>
   </section>
 {% endblock %}
